--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <title>Twister</title>
-    <script type="text/javascript" src="../js/functions.js"></script>
-    <link rel="stylesheet" type="text/css" href="../style/modal.css">
+    <script type="text/javascript" src="js/functions.js"></script>
+    <link rel="stylesheet" type="text/css" href="style/index.css">
 </head>
 <body>
-<form action="../twister.php" method="POST" id="StartTwisterForm">
+<form action="twister.php" method="POST" id="StartTwisterForm">
     <table>
         <tr>
             <td><label>Aantal Spelers?</label></td>
