--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -19,7 +19,10 @@
             </tr>
         </table>
 
-        <input type="submit" value="Doorgaan"><input type="reset" value="Reset">
+        <div class="ButtonContainer">
+            <input class="StartFormButton" type="submit" value="Doorgaan">
+            <input class="StartFormButton" type="reset" value="Reset">
+        </div>
     </form>
 </body>
 </html>
