--- a/index.html
+++ b/index.html
@@ -10,22 +10,19 @@
     <link rel="stylesheet" type="text/css" href="style/index.css">
 </head>
 <body>
-    <form action="php/twister.php" method="POST" id="StartTwisterForm">
-        <table>
-            <tr>
-                <td><label>Aantal Spelers?</label></td>
-                <td><input type="number" max="10" name="AmountPlayers" /></td>
-            </tr>
-            <tr>
-                <td><label>Aantal Kleuren per speler?</label></td>
-                <td><input type="number" max="10" name="AmountColors" /></td>
-            </tr>
-        </table>
+    <table>
+        <tr>
+            <td><label>Aantal Spelers?</label></td>
+            <td><input type="number" max="10" name="AmountPlayers" /></td>
+        </tr>
+        <tr>
+            <td><label>Aantal Kleuren per speler?</label></td>
+            <td><input type="number" max="10" name="AmountColors" /></td>
+        </tr>
+    </table>
 
-        <div class="ButtonContainer">
-            <input class="StartFormButton" type="submit" value="Doorgaan">
-            <input class="StartFormButton" type="reset" value="Reset">
-        </div>
-    </form>
+    <div class="ButtonContainer">
+        <input id="SubmitStartDataButton" class="StartFormButton" type="submit" value="Doorgaan">
+    </div>
 </body>
 </html>
