--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
     <link rel="stylesheet" type="text/css" href="style/index.css">
 </head>
 <body>
+<div id="StartTwisterForm">
     <table>
         <tr>
             <td><label>Aantal Spelers?</label></td>
-            <td><input type="number" max="10" name="AmountPlayers" /></td>
+            <td><input type="number" max="10" name="AmountPlayers"/></td>
         </tr>
         <tr>
             <td><label>Aantal Kleuren per speler?</label></td>
-            <td><input type="number" max="10" name="AmountColors" /></td>
+            <td><input type="number" max="10" name="AmountColors"/></td>
         </tr>
     </table>
 
     <div class="ButtonContainer">
         <input id="SubmitStartDataButton" class="StartFormButton" type="submit" value="Doorgaan">
     </div>
+</div>
 </body>
 </html>
