--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="style/index.css">
 </head>
 <body>
-<div id="StartTwisterForm">
+<form id="StartTwisterForm">
     <table>
         <tr>
             <td><label>Aantal Spelers?</label></td>
@@ -25,6 +25,6 @@
     <div class="ButtonContainer">
         <input id="SubmitStartDataButton" class="StartFormButton" type="submit" value="Doorgaan">
     </div>
-</div>
+</form>
 </body>
 </html>
