--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </table>
 
     <div class="ButtonContainer">
-        <input id="SubmitStartDataButton" class="StartFormButton" type="submit" value="Doorgaan">
+        <input id="SubmitStartDataButton" class="StartFormButton" value="Doorgaan">
     </div>
 </form>
 </body>
