--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </table>
 
     <div class="ButtonContainer">
-        <button id="SubmitStartDataButton" class="StartFormButton" value="Doorgaan"></button>
+        <button id="SubmitStartDataButton" class="StartFormButton">Doorgaan</button>
     </div>
 </form>
 </body>
