--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <table>
         <tr>
             <td><label>Aantal Spelers?</label></td>
-            <td><input type="number" max="10" name="AmountPlayers"/></td>
+            <td><input type="number" max="10" id="AmountPlayers"/></td>
         </tr>
         <tr>
             <td><label>Aantal Kleuren per speler?</label></td>
-            <td><input type="number" max="10" name="AmountColors"/></td>
+            <td><input type="number" max="10" id="AmountColors"/></td>
         </tr>
     </table>
 
