--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="style/index.css">
 </head>
 <body>
-<div>
+<div id="StartTwisterForm">
     <table>
         <tr>
             <td><label>Aantal Spelers?</label></td>
