added div for colorpicker

--- a/index.html
+++ b/index.html
@@ -26,5 +26,17 @@
         <input id="SubmitStartDataButton" class="StartFormButton" type="submit" value="Doorgaan">
     </div>
 </div>
+<div id="EndTwisterForm">
+    <table>
+        <tr>
+            <td><label>Color?</label></td>
+            <td><input type="color" id="Color"/></td>
+        </tr>
+    </table>
+
+    <div class="ButtonContainer">
+        <input id="SubmitEndDataButton" class="EdFormButton" type="submit" value="Doorgaan">
+    </div>
+</div>
 </body>
 </html>
